--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,23 @@
     --color-card-border: #2a2b6b;
     user-select: none
 }
+
+::-webkit-scrollbar {
+  width: 6px;   /* Smaller width */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Optional: can be a light gray if you want */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #9dc8f5;   /* Blue color */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9dc8f5;   /* Darker blue on hover */
+}
 body
 {
   background-color: var(--color-primary);
